--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,17 @@
 {
-  "name": "frontend",
+  "name": "nuxt-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "vue": "^3.3.11",
+    "nuxt": "^3.10.1",
+    "vue": "^3.4.15",
     "vue-router": "^4.2.5"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "unplugin-vue-router": "^0.7.0",
-    "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
   }
 }
