--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,13 +26,17 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
+    "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.11",
+    "vite-plugin-pages": "^0.32.0",
     "vue-tsc": "^1.8.27"
   }
 }
